# uzbar-icon

./: .gitignore  ANALYSIS.md  IMPLEMENT.md  PLAN.md  README.md  TEST.md  cli.py  common.py  icon.py  logo.py  pyproject.toml  react_gen.py
input/: uzBar.json  uzBlog.json  uzETF.json  uzStock.json  uzTDF.json  uzVlog.json
sample/: uzMedi.json  uzTrip.json  uzYoutube.json
