[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontap"
version = "0.1.0"
description = "uzbar icon generator"
dependencies = [
    "requests",
]
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["cli", "icon", "logo", "common", "react_gen"]

[project.scripts]
ontap = "cli:main"

